# curve_fitting

./: CMakeLists.txt  README.md
include/curve_fitting/: curve_fitting.h
src/: curve_fitting.cpp  demo.cpp
